fix gaps

--- a/src/$scss$/_GridDesign.scss
+++ b/src/$scss$/_GridDesign.scss
@@ -44,8 +44,8 @@
 
         //
         & {
-            --padding-h: 2cqmin;
-            --padding-v: 2cqmax;
+            --padding-h: max(4cqmin, 1rem);
+            --padding-v: max(3cqmax, 1rem);
         }
 
         //
